--- a/apps/logistics-frontend/App.razor
+++ b/apps/logistics-frontend/App.razor
@@ -1,5 +1,6 @@
 ﻿@namespace logistics_frontend
 @using logistics_frontend.Pages.Shared.Sidebars
+@using logistics_frontend.Pages.Shared.Components
 
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(App).Assembly">
@@ -12,4 +13,5 @@
             </LayoutView>
         </NotFound>
     </Router>
+    <Toast />
 </CascadingAuthenticationState>
