--- a/apps/logistics-frontend/Pages/Shared/Layouts/PublicLayout.razor
+++ b/apps/logistics-frontend/Pages/Shared/Layouts/PublicLayout.razor
@@ -1,6 +1,6 @@
 @inherits LayoutComponentBase
 @using logistics_frontend.Pages.Shared
     
-<div class="flex flex-col min-h-screen">
+<div class="flex flex-col min-h-screen pt-12">
     @Body
 </div>
